Update 103.4 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.4 Use streams, pipes and redirects/103.4 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.4 Use streams, pipes and redirects/103.4 Lesson 1.md
@@ -115,3 +115,43 @@ $ wc -c <<<"How many characters in this Here string?"
 ```
 В этом примере строка справа от трех знаков меньше отправляется на стандартный ввод команды `wc -c`, которая подсчитывает количество символов. Строки, содержащие пробелы, должны быть внутри кавычек, иначе только первое слово будет использоваться в качестве Here string, а остальные будут переданы в качестве аргументов команде.
 
+
+# Упражнения для закрепления
+
+1. Помимо текстовых файлов, команда `cat` также может работать с двоичными данными, например отправлять содержимое блочного устройства в файл. Как с помощью перенаправления `cat` отправить содержимое устройства `/dev/sdc` в файл `sdc.img` в текущем каталоге? 
+
+
+2. Как называется стандартный канал, перенаправляемый командой `date 1> now.txt`?
+
+
+3. После попытки перезаписать файл с помощью перенаправления пользователь получает сообщение об ошибке, информирующее о том, что опция `noclobber` включена. Как можно отключить опцию `noclobber` для текущего сеанса? 
+
+
+4. Что будет в результате выполнения команды `cat <<.> /dev/stdout`?
+
+
+# Упражнения на размышления
+
+1. Команда `cat /proc/cpu_info` отображает сообщение об ошибке, поскольку `/proc/cpu_info` не существует. Команда `cat /proc/cpu_info 2>1` перенаправляет сообщение об ошибке куда? 
+2. Будет ли по-прежнему возможно отказаться от содержимого, отправленного в `/dev/null`, если для текущего сеанса оболочки включена опция `noclobber`? 
+3. Как можно перенаправить содержимое переменной `$USER` на стандартный ввод команды `sha1sum` без использования `echo`? 
+4. Ядро Linux хранит символические ссылки в `/proc/PID/fd/` на каждый файл, открытый процессом, где `PID` - это идентификационный номер соответствующего процесса. Как может системный администратор использовать этот каталог для проверки расположения файлов журнала, открытых `nginx`, если его PID равен `1234`? 
+5. Можно выполнять арифметические вычисления, используя только встроенные команды оболочки, но для вычислений с плавающей запятой требуются специальные программы, такие как `bc` (базовый калькулятор). С помощью `bc` можно даже указать количество десятичных знаков с помощью шкалы параметров. Однако `bc` принимает операции только через стандартный ввод, обычно вводимый в интерактивном режиме. Используя Here string, как можно операцию с плавающей запятой `scale=6; 1/3` отправить на стандартный ввод `bc`?
+
+
+# Резюме
+
+В этом уроке рассматриваются методы запуска программы, перенаправляющей ее стандартные потокивывода. Процессы Linux используют эти стандартные потоки в качестве общих файловых дескрипторов для чтения и записи данных, что позволяет произвольно преобразовывать их в файлы или устройства. Урок состоит из следующих этапов: 
+* Что такое файловые дескрипторы и какую роль они играют в Linux. 
+* Стандартные потоки вывода каждого процесса: *stdin, stdout* и *stderr*. 
+* Как правильно выполнить команду, используя перенаправление данных, как для потоков ввода, так и для потоков вывода. 
+* Как использовать *Here Documents* и *Here Strings* при перенаправлении потока ввода. 
+
+Были рассмотрены следующие команды и процедуры: 
+* Операторы перенаправления: `>`, `<`, `>>`, `<<`, `<<<`. 
+* Команды `cat`, `set`, `uniq` и `wc`.
+
+# Ответы на упражнения для закрепления
+
+# Ответы на упражнения для размышления
+
