Update 103.4 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.4 Use streams, pipes and redirects/103.4 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.4 Use streams, pipes and redirects/103.4 Lesson 1.md
@@ -119,14 +119,8 @@ $ wc -c <<<"How many characters in this Here string?"
 # Упражнения для закрепления
 
 1. Помимо текстовых файлов, команда `cat` также может работать с двоичными данными, например отправлять содержимое блочного устройства в файл. Как с помощью перенаправления `cat` отправить содержимое устройства `/dev/sdc` в файл `sdc.img` в текущем каталоге? 
-
-
 2. Как называется стандартный канал, перенаправляемый командой `date 1> now.txt`?
-
-
 3. После попытки перезаписать файл с помощью перенаправления пользователь получает сообщение об ошибке, информирующее о том, что опция `noclobber` включена. Как можно отключить опцию `noclobber` для текущего сеанса? 
-
-
 4. Что будет в результате выполнения команды `cat <<.> /dev/stdout`?
 
 
@@ -151,7 +145,46 @@ $ wc -c <<<"How many characters in this Here string?"
 * Операторы перенаправления: `>`, `<`, `>>`, `<<`, `<<<`. 
 * Команды `cat`, `set`, `uniq` и `wc`.
 
+
 # Ответы на упражнения для закрепления
+
+1. Помимо текстовых файлов, команда `cat` также может работать с двоичными данными, например отправлять содержимое блочного устройства в файл. Как с помощью перенаправления `cat` отправить содержимое устройства `/dev/sdc` в файл `sdc.img` в текущем каталоге? 
+```
+$ cat /dev/sdc > sdc.img
+```
+
+2. Как называется стандартный канал, перенаправляемый командой `date 1> now.txt`?
+
+Стандартный вывод или стандартный вывод
+
+3. После попытки перезаписать файл с помощью перенаправления пользователь получает сообщение об ошибке, информирующее о том, что опция `noclobber` включена. Как можно отключить опцию `noclobber` для текущего сеанса? 
+
+`set +C` или `set +o noclobber`
+
+4. Что будет в результате выполнения команды `cat <<.> /dev/stdout`?
+
+Bash войдет в режим ввода Heredoc, а затем выйдет, когда в строке появится точка. Введенный текст будет перенаправлен на стандартный вывод (выводится на экран).
 
 # Ответы на упражнения для размышления
 
+1. Команда `cat /proc/cpu_info` отображает сообщение об ошибке, поскольку `/proc/cpu_info` не существует. Команда `cat /proc/cpu_info 2>1` перенаправляет сообщение об ошибке куда? 
+
+В файл с именем `1` в текущем каталоге.
+
+2. Будет ли по-прежнему возможно отказаться от содержимого, отправленного в `/dev/null`, если для текущего сеанса оболочки включена опция `noclobber`? 
+
+Да. `/dev/null` - это специальный файл, на который noclobber не влияет.
+
+3. Как можно перенаправить содержимое переменной `$USER` на стандартный ввод команды `sha1sum` без использования `echo`? 
+```
+$ sha1sum <<<$USER
+```
+
+4. Ядро Linux хранит символические ссылки в `/proc/PID/fd/` на каждый файл, открытый процессом, где `PID` - это идентификационный номер соответствующего процесса. Как может системный администратор использовать этот каталог для проверки расположения файлов журнала, открытых `nginx`, если его PID равен `1234`? 
+
+Выполнив команду `ls -l /proc/1234/fd`, которая отобразит цели каждой символической ссылки в каталоге.
+
+5. Можно выполнять арифметические вычисления, используя только встроенные команды оболочки, но для вычислений с плавающей запятой требуются специальные программы, такие как `bc` (базовый калькулятор). С помощью `bc` можно даже указать количество десятичных знаков с помощью шкалы параметров. Однако `bc` принимает операции только через стандартный ввод, обычно вводимый в интерактивном режиме. Используя Here string, как можно операцию с плавающей запятой `scale=6; 1/3` отправить на стандартный ввод `bc`?
+```
+$ bc <<<"scale=6; 1/3"
+```
