--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.4 Use streams, pipes and redirects/103.4 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.4 Use streams, pipes and redirects/103.4 Lesson 2.md
@@ -10,4 +10,13 @@
 
 # Введение
 
-Один из аспектов философии Unix гласит, что каждая программа должна иметь определенную цель и не должна пытаться включать функции, выходящие за пределы ее области. Но простота не означает менее проработанных результатов, потому что разные программы могут быть объединены в цепочку для получения комбинированного результата. Символ вертикальной черты |, также известный как символ вертикальной черты, можно использовать для создания конвейера, соединяющего вывод программы непосредственно с вводом другой программы, тогда как подстановка команд позволяет сохранить вывод программы в переменной или использовать это прямо как аргумент другой команды.
+Один из аспектов философии Unix гласит, что каждая программа должна иметь определенную цель и не должна пытаться включать функции, выходящие за пределы ее области ответственности. Но простота не означает меньше результативности, потому что разные программы могут быть объединены в цепочку для получения комбинированного результата. Символ вертикальной черты `|`, также известный как *pipeline*, можно использовать для создания конвейера, соединяющего вывод программы непосредственно с вводом другой программы, тогда как *подстановка команд* позволяет сохранить вывод программы в переменную или использовать его прямо как аргумент для другой команды.
+
+
+# Конвееры
+
+В отличие от перенаправлений, с конвейерами данные передаются слева направо в командной строке, а целью является другой процесс, а не путь файловой системы, дескриптор файла или Here document. Символ конвеера `|` указывает оболочке запускать все отдельные команды одновременно и соединять вывод предыдущей команды с вводом следующей команды слева направо. Например, вместо использования перенаправления содержимое файла `/proc/cpuinfo`, отправляемого на стандартный вывод с помощью `cat`, можно передать по конвейеру на стандартный ввод `wc` с помощью следующей команды:
+```
+$ cat /proc/cpuinfo | wc
+   208    1184    6096
+```
