Update 103.4 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.4 Use streams, pipes and redirects/103.4 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.4 Use streams, pipes and redirects/103.4 Lesson 2.md
@@ -4,7 +4,7 @@
 |:--------------|:--------------------------------------------|
 | Версия:       | 5.0                                         |
 | Тема:         | 103 Команды GNU и Unix                      |                           
-| Цель:         | 103.4 Использование потоков, каналов и перенаправлений |
+| Цель:         | 103.4 Использование потоков, конвееров и перенаправлений |
 | Урок:         | 2 из 2                                      |
 
 
@@ -15,8 +15,55 @@
 
 # Конвееры
 
-В отличие от перенаправлений, с конвейерами данные передаются слева направо в командной строке, а целью является другой процесс, а не путь файловой системы, дескриптор файла или Here document. Символ конвеера `|` указывает оболочке запускать все отдельные команды одновременно и соединять вывод предыдущей команды с вводом следующей команды слева направо. Например, вместо использования перенаправления содержимое файла `/proc/cpuinfo`, отправляемого на стандартный вывод с помощью `cat`, можно передать по конвейеру на стандартный ввод `wc` с помощью следующей команды:
+В отличие от перенаправлений, с конвеерами данные передаются слева направо в командной строке, а целью является другой процесс, а не путь файловой системы, дескриптор файла или Here document. Символ конвеера `|` указывает оболочке запускать все отдельные команды одновременно и соединять вывод предыдущей команды с вводом следующей команды слева направо. Например, вместо использования перенаправления содержимое файла `/proc/cpuinfo`, отправляемого на стандартный вывод с помощью `cat`, можно передать по конвееру на стандартный ввод `wc` с помощью следующей команды:
 ```
 $ cat /proc/cpuinfo | wc
    208    1184    6096
+```
+При отсутствии пути к файлу `wc` подсчитывает количество строк, слов и символов, которые он получает на своем стандартном вводе, как в примере. В составной команде может присутствовать множество конвееров. В следующем примере используются два конвеера:
+```
+$ cat /proc/cpuinfo | grep 'model name' | uniq
+model name      : Intel(R) Xeon(R) CPU           X5355  @ 2.66GHz
+```
+Содержимое файла `/proc/cpuinfo`, созданного с помощью `cat /proc/cpuinfo`, было передано команде `grep 'model name'`, которая затем выбирает только строки, содержащие имя `model name`. Машина, на которой выполняется пример, имеет много процессоров, поэтому есть повторяющиеся строки с названием модели. Последний канал соединяет `grep 'model name'` с `uniq`, который отвечает за пропуск любой строки, равной предыдущей. Конвееры можно комбинировать с перенаправлениями в одной командной строке. Предыдущий пример можно переписать в более простой форме:
+```
+$ grep 'model name' </proc/cpuinfo | uniq
+model name      : Intel(R) Xeon(R) CPU           X5355  @ 2.66GHz
+```
+Перенаправление ввода для `grep` не является строго необходимым, поскольку `grep` принимает путь к файлу в качестве аргумента, но в примере показано, как создавать такие комбинированные команды. 
+
+Конвееры и перенаправления являются эксклюзивными, то есть один источник может быть сопоставлен только с одной целью. Тем не менее, можно перенаправить вывод в файл и по-прежнему видеть его на экране с помощью программы `tee`. Для этого первая программа отправляет свой вывод на стандартный ввод команды `tee`, а последнему предоставляется имя файла для хранения данных:
+```
+$ grep 'model name' </proc/cpuinfo | uniq | tee cpu_model.txt
+model name      : Intel(R) Xeon(R) CPU           X5355  @ 2.66GHz
+$ cat cpu_model.txt
+model name      : Intel(R) Xeon(R) CPU           X5355  @ 2.66GHz
+```
+Вывод последней программы в цепочке, сгенерированный `uniq`, отображается и сохраняется в файле `cpu_model.txt`. Чтобы не перезаписывать содержимое предоставленного файла, а добавлять к нему данные, для команды `tee` необходимо указать параметр `-a`. 
+
+Конвеер захватывает только стандартный вывод процесса. Допустим, вы запустили долгий процесс компиляции на экране и в то же время хотите сохранить как стандартный вывод, так и стандартную ошибку в файл для последующей проверки. Предполагая, что в вашем текущем каталоге нет *Makefile*, следующая команда выдаст ошибку:
+```
+$ make | tee log.txt
+make: *** No targets specified and no makefile found.  
+Stop.
+```
+Хотя сообщение об ошибке отображается на экране, оно не было зафиксировано программой `tee`, и файл *log.txt* был создан пустым. Чтобы конвеер смог захватить stderr, необходимо выполнить перенаправление:
+```
+$ make 2>&1 | tee log.txt
+make: *** No targets specified and no makefile found.  
+Stop.
+$ cat log.txt
+make: *** No targets specified and no makefile found.  
+Stop.
+```
+В этом примере stderr команды `make` был перенаправлен на стандартный вывод, поэтому `tee` смог захватить его с помощью конвейера, отобразить на экране и сохранить в файле `log.txt`. В подобных случаях может быть полезно сохранить сообщения об ошибках для последующей проверки.
+
+
+# Подстановка команд
+
+Другой метод захвата вывода команды - это подстановка команды. Помещая команду внутри обратных кавычек, Bash заменяет ее стандартным выводом. В следующем примере показано, как использовать стандартный вывод программы в качестве аргумента для другой программы:
+```
+$ mkdir `date +%Y-%m-%d`
+$ ls
+2019-09-05
 ```
