Update 103.4 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.4 Use streams, pipes and redirects/103.4 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.4 Use streams, pipes and redirects/103.4 Lesson 2.md
@@ -67,3 +67,28 @@ $ mkdir `date +%Y-%m-%d`
 $ ls
 2019-09-05
 ```
+Вывод программы `date`, текущая дата в формате *год-месяц-день*, использовался в качестве аргумента для создания каталога с помощью *mkdir*. Идентичный результат получается при использовании `$()` вместо обратных кавычек:
+```
+$ rmdir 2019-09-05
+$ mkdir $(date +%Y-%m-%d)
+$ ls
+2019-09-05
+```
+Тот же метод можно использовать для сохранения вывода команды в виде переменной:
+```
+$ OS=`uname -o`
+$ echo $OS
+GNU/Linux
+```
+Команда `uname -o` выводит общее имя текущей операционной системы, которое было сохранено в переменной сеанса `OS`. Назначение вывода команды переменной очень полезно в сценариях, что позволяет сохранять и оценивать данные различными способами. В зависимости от вывода, сгенерированного замененной командой, встроенная подстановка команд может быть неподходящей. Более сложный метод использования вывода программы в качестве аргумента другой программы использует промежуточное звено, называемое `xargs`. Программа `xargs` использует содержимое, которое она получает через стандартный ввод, для запуска заданной команды с содержимым в качестве аргумента. В следующем примере показано, как `xargs` выполняет программу `identify` с аргументами, предоставленными программой `find`:
+```
+$ find /usr/share/icons -name 'debian*' | xargs identify -format "%f: %wx%h\n"
+debian-swirl.svg: 48x48
+debian-swirl.png: 22x22
+debian-swirl.png: 32x32
+debian-swirl.png: 256x256
+debian-swirl.png: 48x48
+debian-swirl.png: 16x16
+debian-swirl.png: 24x24
+debian-swirl.svg: 48x48
+```
