Update 103.4 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.4 Use streams, pipes and redirects/103.4 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.4 Use streams, pipes and redirects/103.4 Lesson 2.md
@@ -92,3 +92,20 @@ debian-swirl.png: 16x16
 debian-swirl.png: 24x24
 debian-swirl.svg: 48x48
 ```
+Программа `identify` является частью `ImageMagick`, набора инструментов командной строки для проверки, преобразования и редактирования большинства типов файлов изображений. В этом примере `xargs` взял все пути, перечисленные с помощью `find`, и поместил их в качестве аргументов для `identify`, которая затем показывает информацию для каждого файла, отформатированного в соответствии с опцией `-format`. Файлы, найденные с помощью команды `find` в примере, являются изображениями, содержащими логотип распространения в файловой системе Debian. `-format` - это параметр для `identify`, а не для `xargs`. 
+
+Опция `-n 1` требует, чтобы `xargs` запускал данную команду только с одним аргументом за раз. В случае примера вместо передачи всех путей, найденных с помощью `find`, в виде списка аргументов для `identify`, использование `xargs -n 1` приведет к выполнению команды `identify` для каждого пути отдельно. Использование `-n 2` вызовет `identify` с двумя путями в качестве аргументов, `-n 3` с тремя путями в качестве аргументов и так далее. Точно так же, когда `xargs` обрабатывает многострочное содержимое - как в случае с вводом, предоставленным `find` - можно использовать параметр `-L`, чтобы ограничить количество строк, которые будут использоваться в качестве аргументов при выполнении команды.
+
+>Использование `xargs` с опцией `-n 1` или `-L 1` для обработки вывода, созданного с помощью `find`, может быть ненужным. Команда `find` имеет параметр `-exec` для запуска заданной команды для каждого элемента результатов поиска.
+
+Если в путях есть пробелы, важно запустить `find` с параметром `-print0`. Эта опция указывает `find` использовать нулевой символ между каждой записью, чтобы список мог быть правильно проанализирован с помощью `xargs`(вывод был подавлен):
+```
+$ find . -name '*avi' -print0 -o -name '*mp4' -print0 -o -name '*mkv' -print0 | xargs -0 du | sort -n
+```
+Параметр `-0` указывает `xargs`, что в качестве разделителя следует использовать нулевой символ. Таким образом, пути к файлам, заданные командой `find`, будут правильно проанализированы, даже если в них есть пробелы или другие специальные символы. В предыдущем примере показано, как использовать команду `du`, чтобы узнать использование диска каждым найденным файлом, а затем отсортировать результаты по размеру. Вывод был скрыт для краткости. Обратите внимание, что для каждого критерия поиска необходимо указать параметр `-print0` для поиска. 
+
+По умолчанию `xargs` помещает аргументы выполняемой команды последними. Чтобы изменить это поведение, следует использовать параметр `-I`:
+```
+$ find . -mindepth 2 -name '*avi' -print0 -o -name '*mp4' -print0 -o -name '*mkv' -print0 | xargs -0 -I PATH mv PATH ./
+```
+В последнем примере каждый файл, найденный с помощью `find`, перемещается в текущий каталог. Поскольку исходный путь (пути) должен быть сообщен `mv` перед целевым путем, для опции `-I` в `xargs` дается термин замены, который затем соответствующим образом помещается рядом с `mv`. Используя нулевой символ в качестве разделителя, нет необходимости заключать термин замены в кавычки.
