--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.4 Use streams, pipes and redirects/103.4 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.4 Use streams, pipes and redirects/103.4 Lesson 2.md
@@ -16,13 +16,10 @@
 # Конвееры
 
 В отличие от перенаправлений, с конвеерами данные передаются слева направо в командной строке, а целью является другой процесс, а не путь файловой системы, дескриптор файла или Here document. Символ конвеера `|` указывает оболочке запускать все отдельные команды одновременно и соединять вывод предыдущей команды с вводом следующей команды слева направо. Например, вместо использования перенаправления содержимое файла `/proc/cpuinfo`, отправляемого на стандартный вывод с помощью `cat`, можно передать по конвееру на стандартный ввод `wc` с помощью следующей команды:
-**
 ```
 $ cat /proc/cpuinfo | wc
    208    1184    6096
 ```
-**
-
 При отсутствии пути к файлу `wc` подсчитывает количество строк, слов и символов, которые он получает на своем стандартном вводе, как в примере. В составной команде может присутствовать множество конвееров. В следующем примере используются два конвеера:
 ```
 $ cat /proc/cpuinfo | grep 'model name' | uniq
@@ -111,4 +108,37 @@ $ find . -name '*avi' -print0 -o -name '*mp4' -print0 -o -name '*mkv' -print0 | 
 ```
 $ find . -mindepth 2 -name '*avi' -print0 -o -name '*mp4' -print0 -o -name '*mkv' -print0 | xargs -0 -I PATH mv PATH ./
 ```
-В последнем примере каждый файл, найденный с помощью `find`, перемещается в текущий каталог. Поскольку исходный путь (пути) должен быть сообщен `mv` перед целевым путем, для опции `-I` в `xargs` дается термин замены, который затем соответствующим образом помещается рядом с `mv`. Используя нулевой символ в качестве разделителя, нет необходимости заключать термин замены в кавычки.
+В последнем примере каждый файл, найденный с помощью `find`, перемещается в текущий каталог. Поскольку исходный путь (пути) должен быть сообщен `mv` перед целевым путем, для опции `-I` в `xargs` подставляется переменная, которая затем соответствующим образом помещается за `mv`. Используя нулевой символ в качестве разделителя, нет необходимости заключать подставленную переменную в кавычки.
+
+
+# Упражнения для закрепления
+
+1. Удобно сохранять дату выполнения действий, выполняемых автоматическими скриптами. Команда `date +%Y-%m-%d` показывает текущую дату в формате *год-месяц-день*. Как можно сохранить вывод такой команды в переменной оболочки с именем TODAY с помощью подстановки команд? 
+2. Как с помощью команды `echo` можно отправить содержимое переменной `TODAY` на стандартный ввод команды `sed s/-/./g`? 
+3. Как можно использовать вывод команды `date +%Y-%m-%d` в качестве Here string для команды `sed s/-/./g`? 
+4. Команда `convert image.jpeg -resize 25% small/image.jpeg` создает уменьшенную версию `image.jpeg` и помещает полученное изображение в файл с таким же именем внутри подкаталога `small`. Как с помощью `xargs` можно выполнить одну и ту же команду для каждого изображения, указанного в файле `filelist.txt`?
+
+
+# Упражнения на размышления
+
+1. Простая процедура резервного копирования периодически создает образ раздела `/dev/sda1` при помощи `dd < /dev/sda1 > sda1.img`. Для выполнения будущих проверок целостности данных процедура также генерирует хэш SHA1 файла при помощи `sha1sum <sda1.img> sda1.sha1`. Как можно объединить эти две команды в одну, добавив конвееры и команду `tee`? 
+2. Команда `tar` используется для архивирования множества файлов в один файл с сохранением структуры каталогов. Опция `-T` позволяет указать файл, содержащий пути для архивирования. Например, `find /etc -type f | tar -cJ -f /srv/backup/etc.tar.xz -T` - создает сжатый файл tar и `etc.tar.xz` из списка, предоставленного командой `find` (опция `-T` - указывает стандартный ввод как список путей). Какие параметры команды должны присутствовать для `find` и `tar`, чтобы избежать возможных ошибок синтаксического анализа из-за путей, содержащих пробелы? 
+3. Вместо открытия нового сеанса удаленной оболочки команда ssh может просто выполнить команду, указанную в качестве аргумента: `ssh user@storage` «удаленная команда». Учитывая, что `ssh` также позволяет перенаправить стандартный вывод локальной программы на стандартный ввод удаленной программы, как бы команда `cat` перенаправила локальный файл с именем `etc.tar.gz` в `/srv/backup/etc.tar.gz` по адресу `user@storage` через `ssh`?
+
+
+# Резюме
+
+В этом уроке рассматриваются традиционные методы межпроцессного взаимодействия, используемые в Linux. *Конвейерная обработка команд* создает односторонний канал связи между двумя процессами, а *подстановка команд* позволяет сохранять выходные данные процесса в переменной оболочки. Урок состоит из следующих этапов: 
+* Как конвейеры могут использоваться для потоковой передачи выходных данных одного процесса на вход другого процесса. 
+* Назначение команд `tee` и `xargs`. 
+* Как записать вывод процесса с помощью подстановки команд, сохранить его в переменной или использовать непосредственно в качестве параметра для другой команды.
+
+Были рассмотрены следующие команды и процедуры: 
+* Конвейерная обработка команд с помощью `|`. 
+* Подстановка команд с помощью обратных кавычек и `$()`. 
+* Команды `tee`, `xargs` и `find`.
+
+# Ответы на упражнения для закрепления
+
+
+# Ответы на упражнения для размышления
