Update 103.4 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.4 Use streams, pipes and redirects/103.4 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.4 Use streams, pipes and redirects/103.4 Lesson 2.md
@@ -138,7 +138,64 @@ $ find . -mindepth 2 -name '*avi' -print0 -o -name '*mp4' -print0 -o -name '*mkv
 * Подстановка команд с помощью обратных кавычек и `$()`. 
 * Команды `tee`, `xargs` и `find`.
 
+
 # Ответы на упражнения для закрепления
+
+1. Удобно сохранять дату выполнения действий, выполняемых автоматическими скриптами. Команда `date +%Y-%m-%d` показывает текущую дату в формате *год-месяц-день*. Как можно сохранить вывод такой команды в переменной оболочки с именем TODAY с помощью подстановки команд? 
+```
+$ TODAY=`date +%Y-%m-%d
+````
+или
+```
+$ TODAY=$(date +%Y-%m-%d)
+```
+2. Как с помощью команды `echo` можно отправить содержимое переменной `TODAY` на стандартный ввод команды `sed s/-/./g`? 
+```
+$ echo $TODAY | sed s/-/./g
+```
+3. Как можно использовать вывод команды `date +%Y-%m-%d` в качестве Here string для команды `sed s/-/./g`? 
+```
+$ sed s/-/./g <<< `date +%Y-%m-%d`
+```
+или
+```
+$ sed s/-/./g <<< $(date +%Y-%m-%d)
+```
+4. Команда `convert image.jpeg -resize 25% small/image.jpeg` создает уменьшенную версию `image.jpeg` и помещает полученное изображение в файл с таким же именем внутри подкаталога `small`. Как с помощью `xargs` можно выполнить одну и ту же команду для каждого изображения, указанного в файле `filelist.txt`?
+```
+$ xargs -I IMG convert IMG -resize 25% small/IMG < filelist.txt
+```
+или
+```
+$ cat filelist.txt | xargs -I IMG convert IMG -resize 25% small/IMG
+```
 
 
 # Ответы на упражнения для размышления
+
+1. Удобно сохранять дату выполнения действий, выполняемых автоматическими скриптами. Команда `date +%Y-%m-%d` показывает текущую дату в формате *год-месяц-день*. Как можно сохранить вывод такой команды в переменной оболочки с именем TODAY с помощью подстановки команд? 
+2. Как с помощью команды `echo` можно отправить содержимое переменной `TODAY` на стандартный ввод команды `sed s/-/./g`? 
+3. Как можно использовать вывод команды `date +%Y-%m-%d` в качестве Here string для команды `sed s/-/./g`? 
+4. Команда `convert image.jpeg -resize 25% small/image.jpeg` создает уменьшенную версию `image.jpeg` и помещает полученное изображение в файл с таким же именем внутри подкаталога `small`. Как с помощью `xargs` можно выполнить одну и ту же команду для каждого изображения, указанного в файле `filelist.txt`?
+
+
+# Упражнения на размышления
+
+1. Простая процедура резервного копирования периодически создает образ раздела `/dev/sda1` при помощи `dd < /dev/sda1 > sda1.img`. Для выполнения будущих проверок целостности данных процедура также генерирует хэш SHA1 файла при помощи `sha1sum <sda1.img> sda1.sha1`. Как можно объединить эти две команды в одну, добавив конвееры и команду `tee`? 
+```
+# dd < /dev/sda1 | tee sda1.img | sha1sum > sda1.sha1
+```
+2. Команда `tar` используется для архивирования множества файлов в один файл с сохранением структуры каталогов. Опция `-T` позволяет указать файл, содержащий пути для архивирования. Например, `find /etc -type f | tar -cJ -f /srv/backup/etc.tar.xz -T` - создает сжатый файл tar и `etc.tar.xz` из списка, предоставленного командой `find` (опция `-T` - указывает стандартный ввод как список путей). Какие параметры команды должны присутствовать для `find` и `tar`, чтобы избежать возможных ошибок синтаксического анализа из-за путей, содержащих пробелы? 
+
+Параметры `-print0` и `--null`:
+```
+$ find /etc -type f -print0 | tar -cJ -f /srv/backup/etc.tar.xz -T - --null
+```
+3. Вместо открытия нового сеанса удаленной оболочки команда ssh может просто выполнить команду, указанную в качестве аргумента: `ssh user@storage` «удаленная команда». Учитывая, что `ssh` также позволяет перенаправить стандартный вывод локальной программы на стандартный ввод удаленной программы, как бы команда `cat` перенаправила локальный файл с именем `etc.tar.gz` в `/srv/backup/etc.tar.gz` по адресу `user@storage` через `ssh`?
+```
+$ cat etc.tar.xz | ssh user@storage "cat > /srv/backup/etc.tar.xz"
+```
+или
+```
+$ ssh user@storage "cat > /srv/backup/etc.tar.xz" < etc.tar.xz
+```
