Update 103.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
@@ -163,5 +163,36 @@ $ jobs
 >Если задание не указано, `fg` и `bg` будут действовать в соответствии с текущим заданием по умолчанию. `kill`, однако, всегда требует указания спецификации задания.
 
 
-## Отдельные задания: `nohup`
+## Отключенные задания: `nohup`
+
+Все задания, которые мы видели в предыдущих разделах, были привязаны к сеансу пользователя, который их вызвал. Это означает, что если сеанс завершается, задания исчезают. Однако можно отсоединять задания от сеансов и запускать их даже после закрытия сеанса. Это достигается с помощью команды `nohup` («без зависания»). Синтаксис следующий:
+```
+nohup COMMAND &
+```
+Помните, что `&` отправляет процесс в фоновый режим и освобождает терминал, на котором вы работаете. Давайте отключим фоновое задание `ping localhost` от текущего сеанса:
+```
+$ nohup ping localhost &
+[1] 1251
+$ nohup: ignoring input and appending output to 'nohup.out'
+^C
+```
+Вывод показывает нам идентификатор задания (`[1]`) и PID (`1251`), за которым следует сообщение о файле `nohup.out`. Это файл по умолчанию, в котором будут сохранены `stdout` и `stderr`. Теперь мы можем нажать `Ctrl`+`C`, чтобы освободить командную строку, закрыть сеанс, запустить еще один как `root` и использовать `tail -f`, чтобы проверить, выполняется ли команда и выводятся ли данные в файл по умолчанию:
+```
+$ exit
+logout
+$ tail -f /home/carol/nohup.out
+64 bytes from localhost (::1): icmp_seq=3 ttl=64 time=0.070 ms
+64 bytes from localhost (::1): icmp_seq=4 ttl=64 time=0.068 ms
+64 bytes from localhost (::1): icmp_seq=5 ttl=64 time=0.070 ms
+^C
+```
+>Вместо использования `nohup.out` по умолчанию вы могли бы указать выходной файл по вашему выбору с помощью `nohup ping localhost > /path/to/your/file &`.
+
+Если мы хотим завершить процесс, мы должны указать его PID:
+```
+# kill 1251
+```
+
+
+## Мониторинг процессов
 
