Update 103.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
@@ -196,3 +196,165 @@ $ tail -f /home/carol/nohup.out
 
 ## Мониторинг процессов
 
+Процесс или задача - это экземпляр запущенной программы. Таким образом, вы создаете новые процессы каждый раз, когда вводите команды в терминал. Команда `watch` выполняет программу периодически (по умолчанию 2 секунды) и позволяет нам наблюдать за изменением вывода программы с течением времени. Например, мы можем отслеживать, как изменяется средняя нагрузка по мере выполнения большего количества процессов, набрав `watch uptime`:
+```
+Every  2.0s: uptime          debian: Tue Aug 20 23:31:27 2019
+
+ 23:31:27 up 21 min,  1 user,  load average: 0.00, 0.00, 0.00
+```
+Команда выполняется до тех пор, пока не будет прервана, поэтому нам придется остановить ее с помощью `Ctrl`+`C`. В качестве вывода мы получаем две строки: первая соответствует `watch` и сообщает нам, как часто команда будет запускаться (Every `2.0s: uptime`), какую команду/программу нужно отслеживать (`uptime`), а также имя хоста и дата (`debian: Tue Aug 20 23:31:27 2019`). Вторая строка вывода - это время безотказной работы и включает время (`23:31:27`), сколько времени система работала (`up 21 min`), количество активных пользователей (`1 user`) и среднюю загрузку системы или количество процессы в состоянии выполнения или ожидания в течение последних 1, 5 и 15 минут (`load average: 0.00, 0.00, 0.00`). Точно так же вы можете проверить использование памяти при создании новых процессов с помощью `watch free`:
+```
+Every  2.0s: free            debian: Tue Aug 20 23:43:37 2019
+
+ 23:43:37 up 24 min,  1 user,  load average: 0.00, 0.00, 0.00
+              total        used        free      shared  buff/cache   available
+Mem:       16274868      493984    14729396       35064     1051488    15462040
+Swap:      16777212           0    16777212
+```
+Чтобы изменить интервал обновления для `watch`, используйте параметры `-n` или `--interval` плюс количество секунд, как в:
+```
+$ watch -n 5 free
+```
+Теперь команда `free` будет запускаться каждые 5 секунд.
+
+Для получения дополнительной информации о `uptime`, `free` и `watch`, пожалуйста, обратитесь к их страницам руководства.
+
+>Информация, предоставленная `uptime` и `free`, также интегрирована в более полные инструменты `top` и `ps` (см. ниже).
+
+
+## Отправка сигналов процессам: `kill`
+
+Каждый процесс имеет уникальный идентификатор или PID. Один из способов узнать PID процесса - использовать команду `pgrep`, за которой следует имя процесса:
+```
+$ pgrep sleep
+1201
+```
+>Идентификатор процесса также можно узнать с помощью команды `pidof` (например, `pidof sleep`).
+
+Подобно `pgrep`, команда `pkill` завершает процесс на основе его имени:
+```
+$ pkill sleep
+[1]+  Terminated              sleep 60
+```
+Чтобы завершить несколько экземпляров одного и того же процесса, можно использовать команду `killall`:
+```
+$ sleep 60 &
+[1] 1246
+$ sleep 70 &
+[2] 1247
+$ killall sleep
+[1]-  Terminated              sleep 60
+[2]+  Terminated              sleep 70
+```
+И `pkill`, и `killall` работают так же, как и `kill`, поскольку они отправляют сигнал завершения указанному процессу(ам). Если сигнал не предоставляется, отправляется значение по умолчанию `SIGTERM`. Однако `kill` принимает в качестве аргумента только задание или идентификатор процесса. 
+
+Сигналы могут быть указаны как:
+* Name:
+```
+$ kill -SIGHUP 1247
+```
+* Nummber:
+```
+$ kill -1 1247
+```
+* Option:
+```
+$ kill -s SIGHUP 1247
+```
+Чтобы `kill` работал аналогично `pkill` или `killall`(и сохранил себе команды, чтобы сначала узнать PID), мы можем использовать подстановку команд:
+```
+$ kill -1 $(pgrep sleep)
+```
+Как вы уже знаете, альтернативный синтаксис - `kill -1 'pgrep sleep'`.
+>Чтобы получить исчерпывающий список всех сигналов завершения и их кодов, введите в терминал `kill -l`. Используйте `-KILL` (`-9` или `-s KILL`), чтобы завершить необходимый процесс при сбое любого другого сигнала.
+
+
+## `top` и `ps`
+
+Когда дело доходит до мониторинга процессов, есть два незаменимых инструмента - `top` и `ps`. В то время как первое производит вывод динамически, второе - статически. В любом случае, обе являются отличными утилитами для полного обзора всех процессов в системе.
+
+
+### Взаимодействие с `top`
+
+Чтобы вызвать `top`, просто введите `top`:
+```
+$ top
+
+top - 11:10:29 up  2:21,  1 user,  load average: 0,11, 0,20, 0,14
+Tasks:  73 total,   1 running,  72 sleeping,   0 stopped,   0 zombie
+%Cpu(s):  0,0 us,  0,3 sy,  0,0 ni, 99,7 id,  0,0 wa,  0,0 hi,  0,0 si,  0,0 st
+KiB Mem :  1020332 total,   909492 free,    38796 used,    72044 buff/cache
+KiB Swap:  1046524 total,  1046524 free,        0 used.   873264 avail Mem
+
+   PID USER      PR  NI    VIRT    RES    SHR S %CPU %MEM     TIME+ COMMAND
+   436 carol     20   0   42696   3624   3060 R  0,7  0,4   0:00.30 top
+     4 root      20   0       0      0      0 S  0,3  0,0   0:00.12 kworker/0:0
+   399 root      20   0   95204   6748   5780 S  0,3  0,7   0:00.22 sshd
+     1 root      20   0   56872   6596   5208 S  0,0  0,6   0:01.29 systemd
+     2 root      20   0       0      0      0 S  0,0  0,0   0:00.00 kthreadd
+     3 root      20   0       0      0      0 S  0,0  0,0   0:00.02 ksoftirqd/0
+     5 root       0 -20       0      0      0 S  0,0  0,0   0:00.00 kworker/0:0H
+     6 root      20   0       0      0      0 S  0,0  0,0   0:00.00 kworker/u2:0
+     7 root      20   0       0      0      0 S  0,0  0,0   0:00.08 rcu_sched
+     8 root      20   0       0      0      0 S  0,0  0,0   0:00.00 rcu_bh
+     9 root      rt   0       0      0      0 S  0,0  0,0   0:00.00 migration/0
+    10 root       0 -20       0      0      0 S  0,0  0,0   0:00.00 lru-add-drain
+    (...)
+```
+`top` позволяет пользователю некоторое взаимодействие. По умолчанию вывод сортируется по проценту процессорного времени, используемого каждым процессом, в порядке убывания. Это поведение можно изменить, нажав следующие клавиши `top`: 
+
+`M` 
+
+Сортировать по использованию памяти. 
+
+`N` 
+
+Сортировать по идентификатору процесса. 
+
+`Т` 
+
+Сортировать по времени работы. 
+
+`P` 
+
+Сортировать по проценту использования ЦП. 
+ 
+>Для переключения между порядком убывания и возрастания просто нажмите `R`.
+
+Другие интересные ключи для взаимодействия с `top`:
+
+`?` или `h` 
+
+Помощь. 
+
+`k` 
+
+Завершить процесс. `top` запросит `PID` процесса, который нужно убить, а также послать сигнал (по умолчанию `SIGTERM` или `15`). 
+
+`r`
+
+Изменить приоритет процесса (`renice`). `top` спросит у вас значение `nice`. Возможные значения находятся в диапазоне от -20 до 19, но только суперпользователь (`root`) может установить для него значение, отрицательное или меньшее, чем текущее. 
+
+`u`
+
+Список процессов определенного пользователя (по умолчанию отображаются процессы от всех пользователей). 
+
+`c` 
+
+Показывать абсолютные пути программ и различать процессы пользовательского пространства и процессы пространства ядра (в квадратных скобках). 
+
+`V` 
+
+Дерево/иерархия процессов. 
+
+`t` и `m` 
+
+Измените внешний вид показаний ЦП и памяти соответственно в четырехэтапном цикле: первые два нажатия показывают индикаторы выполнения, третье скрывает полосу, а четвертое возвращает ее. 
+
+`W` 
+
+Сохраните настройки конфигурации в `~/.toprc`.
+
+>Более интересная и удобная версия `top` - это `htop`. Другая - возможно, более исчерпывающая альтернатива это `atop`. Если они еще не установлены в вашей системе, используйте диспетчер пакетов, чтобы установить их и попробовать.
+
+### Объяснение вывода `top`
