Update 103.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
@@ -304,7 +304,6 @@ KiB Swap:  1046524 total,  1046524 free,        0 used.   873264 avail Mem
 `top` позволяет пользователю некоторое взаимодействие. По умолчанию вывод сортируется по проценту процессорного времени, используемого каждым процессом, в порядке убывания. Это поведение можно изменить, нажав следующие клавиши `top`: 
 
 `M` 
-
     Сортировать по использованию памяти. 
 
 `N` 
@@ -353,7 +352,7 @@ KiB Swap:  1046524 total,  1046524 free,        0 used.   873264 avail Mem
 
 `W` 
 
-Сохраните настройки конфигурации в `~/.toprc`.
+Сохранить настройки конфигурации в `~/.toprc`.
 
 >Более интересная и удобная версия `top` - это `htop`. Другая - возможно, более исчерпывающая альтернатива это `atop`. Если они еще не установлены в вашей системе, используйте диспетчер пакетов, чтобы установить их и попробовать.
 
